trying to fix image on iphone

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14474,6 +14474,7 @@ button:focus {outline:0;}
 }
 
 .addToCartSvg {
+    background-attachment: fixed;
     width: 26px;
     z-index: 10000;
 }
